modules/portal/portal-impl/src/test/resources/myapplication/error/errorRedirect.js
exports.handleError = function (err) {
    return {
        redirect: '/other/page'
    };
};
